<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">Stumbler</string>
    <string name="exit">終了</string>
    <string name="error">エラー: </string>
    <string name="lat">緯度</string>
    <string name="latlng">緯度経度</string>
    <string name="lng">経度</string>
    <string name="address">住所: </string>
    <string name="interval">更新間隔(時間;ms)</string>
    <string name="empty"></string>
    <string name="providers">プロバイダ: </string>
    <string name="output">最終行: </string>
    <string name="map">地図</string>
    <string name="revgeocode">逆ジオコーディング</string>
    <string name="map_zoom">倍率</string>
    <string name="enable_show_gpssetting_if_disable">GPSがオフのときに設定画面を表示する</string>
    <string name="enable_show_gpssetting_on_destroy">終了時に設定画面を表示する</string>
    <string name="enable_revgeocode">逆ジオコーディングを有効にする</string>
    <string name="revgeocode_interval">逆ジオコーディングを行う頻度（n回緯度経度が変わる毎に1度）</string>
    <string name="sensor">センサー</string>
    <string name="sound">音</string>
    <string name="sound_update">測位通知音</string>
    <string name="sound_error">エラー通知音</string>
    <string name="min_distance">更新間隔(距離;m)</string>
    <string name="nmea_gpgsa">nmea_gpgsa</string>
    <string name="nmea_gprmc">nmea_gprmc</string>
    <string name="nmea_gpvtg">nmea_gpvtg</string>
    <string name="nmea_gpgga">nmea_gpgga</string>
    <string name="nmea_gpgsv_layout">nmea_gpgsv_layout</string>

</resources> <!-- Copyright (c) 2012-2015 YA <ya.androidapp@gmail.com> All rights reserved. -->
