<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".StumblerActivity" >

        <TextView
            android:id="@+id/providers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/providers"
            android:textColor="#ff000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/latlng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/latlng"
            android:lines="1"
            android:text="@string/empty"
            android:textColor="#ff000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_revgeocode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/revgeocode"
            android:textSize="12sp" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_map"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/map"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_pref"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_settings"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_exit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textColor="#ff888888"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_sensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/sensor"
            android:textColor="#ff0000ff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/address"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/nmea_gpgsa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nmea_gpgsa"
            android:lines="1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/nmea_gprmc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nmea_gprmc"
            android:lines="1"
            android:textColor="#ff00ff00"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/nmea_gpvtg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nmea_gpvtg"
            android:lines="1"
            android:textColor="#ff00ff00"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/nmea_gpgga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nmea_gpgga"
            android:lines="1"
            android:textColor="#ff00ff00"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/nmea_gpgsv_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="#ff00ff00"
            android:textSize="12sp" >
        </LinearLayout>

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/output"
            android:textSize="12sp" />
    </LinearLayout>

</ScrollView> <!-- Copyright (c) 2012-2015 YA <ya.androidapp@gmail.com> All rights reserved. -->
